[package]
name = "rust-js-network-graph"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
error-chain = "0.12.1"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
